prevent crash for missing card, fix crash Android 8-13 NoSuchMethodError